# superprompts

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  commitlint.config.js  mcp.json  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py
.cursor/rules/: README.md  architecture-dependency-injection.mdc  architecture-module-structure.mdc  code-quality-async-patterns.mdc  code-quality-error-handling.mdc  code-quality-logging.mdc  code-quality-pydantic-models.mdc  code-quality-python-typing.mdc  critical-async.mdc  critical-security.mdc  documentation-api-documentation.mdc  documentation-markdown-standards.mdc  documentation-readme-standards.mdc  general-git-workflow.mdc  general-project-structure.mdc  general-python-best-practices.mdc  performance-async-optimization.mdc  performance-memory-management.mdc  security-input-validation.mdc  testing-async-patterns.mdc  testing-nox-integration.mdc  testing-pytest-patterns.mdc
.github/workflows/: ci.yml  validate.yml
docs/: README.md  ai_prompting_best_practices.md  ai_ready_documentation_standards.md  api.md  api_reference.md  architecture.md  available_prompts.md  ci_cd_workflows.md  cli_reference.md  commit_message_standards.md  commit_standards.md  contributing_guide.md  cursor_rules_generator.md  cursor_rules_guide.md  development.md  development_environment.md  development_guide.md  environment_variables.md  error_handling.md  getting_started.md  installation_guide.md  mcp_configuration.md  mcp_configuration_guide.md  mcp_guide.md  mcp_reference.md  mcp_server_guide.md  nested_cursor_rules.md  performance.md  pre_commit.md  quick_start_guide.md  repo_docs_rebuilder.md  rules_usage.md  security.md  testing.md  troubleshooting.md  troubleshooting_guide.md
schemas/: README.md  cursor_rule_frontmatter.schema.json  mcp_server_definition.schema.json
scripts/: validate_cursor_rules.py
superprompts/: __init__.py
superprompts/cli/: __init__.py  __main__.py  main.py
superprompts/cli/.cursor/rules/: cli-development.mdc
superprompts/mcp/: README.md  __init__.py  adapters.py  config.py  server.py
superprompts/mcp/.cursor/rules/: architecture-patterns.mdc  mcp-server-patterns.mdc
superprompts/prompts/: __init__.py  base.py  cursor_rules.py  repo_docs.py
superprompts/prompts/.cursor/rules/: prompt-management.mdc
tests/: test_cli_integration.py  test_mcp_config.py  test_server.py  test_startup.py
tests/.cursor/rules/: testing-patterns.mdc
